@@ -1,10 +1,6 @@
-import org.springframework.cloud.contract.verifier.config.TestFramework
-
-
 plugins {
-    id "java"
-    //https://youtrack.jetbrains.com/issue/IDEA-151925?_ga=2.75699861.105379761.1613457260-781677120.1613140272#comment=27-2355076
     id "idea"
+    id "java"
     id "org.springframework.boot" version "2.5.2"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "org.springframework.cloud.contract" version "3.0.3"
@@ -23,9 +19,16 @@ sourceSets {
 
 idea {
     module {
+        testSourceDirs += project.sourceSets.contractTest.java.srcDirs
+        testSourceDirs += project.sourceSets.contractTest.resources.srcDirs
+
         testSourceDirs += project.sourceSets.intTest.java.srcDirs
         testSourceDirs += project.sourceSets.intTest.resources.srcDirs
     }
+}
+
+contracts {
+    baseClassForTests = "com.effective.ecommerce.yetanother.ContractTestBaseClass"
 }
 
 repositories {
@@ -57,9 +60,7 @@ dependencies {
     compileOnly "org.projectlombok:lombok"
     compileOnly "org.postgresql:postgresql:$postgresqlVersion"
 
-    // https://mvnrepository.com/artifact/org.postgresql/postgresql
     runtimeOnly "org.postgresql:postgresql:42.1.4"
-
 
     developmentOnly "org.springframework.boot:spring-boot-devtools"
 
@@ -71,9 +72,6 @@ dependencies {
     intTestImplementation "org.springframework.boot:spring-boot-starter-test"
     intTestImplementation "org.testcontainers:testcontainers"
     intTestImplementation "org.testcontainers:postgresql"
-
-    contractTestImplementation "org.testcontainers:testcontainers"
-    contractTestImplementation "org.testcontainers:postgresql"
 }
 
 dependencyManagement {
@@ -83,32 +81,18 @@ dependencyManagement {
     }
 }
 
-test {
-    useJUnitPlatform()
-}
-
-task integrationTest(type: Test) {
+tasks.register("integrationTest", Test) {
     description = "Runs integration tests."
     group = "verification"
 
     testClassesDirs = sourceSets.intTest.output.classesDirs
     classpath = sourceSets.intTest.runtimeClasspath
+
     shouldRunAfter test
-}
-
-
-
-integrationTest {
-    useJUnitPlatform()
 }
 
 check.dependsOn integrationTest
 
-contracts {
-    baseClassForTests = "com.effective.ecommerce.yetanother.ContractTestBaseClass"
-}
-
 tasks.withType(Test) {
     useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
